// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsDataImportUpload > renders correctly 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
  data-v-c492a79d=""
  id="data-import-upload"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    style="max-width: 900px;"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <!--v-if-->
    
    
    <div
      class="v-card-title justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
    >
      Data import
    </div>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <div
        class="v-row v-row--density-default"
        data-v-c492a79d=""
      >
        <div
          class="v-col v-col--cols-12 py-4 px-1"
          data-v-c492a79d=""
        >
          <div
            class="v-sheet v-theme--light elevation-2 v-sheet--rounded v-stepper"
            data-v-c492a79d=""
          >
            <!---->
            <!---->
            
            <div
              class="v-stepper-header"
              data-v-c492a79d=""
            >
              <button
                class="v-stepper-item v-stepper-item--selected"
                data-v-c492a79d=""
                disabled=""
                type="button"
              >
                <!---->
                <div
                  class="v-avatar v-theme--light bg-primary v-avatar--density-default v-avatar--variant-flat v-stepper-item__avatar"
                  style="width: 24px; height: 24px;"
                >
                  
                  
                  1
                  
                  
                  
                  <!---->
                  <span
                    class="v-avatar__underlay"
                  />
                  
                </div>
                <div
                  class="v-stepper-item__content"
                >
                  <!---->
                  <!---->
                  
                  Add file
                  
                </div>
              </button>
              <hr
                aria-orientation="horizontal"
                class="v-divider v-theme--light"
                data-v-c492a79d=""
                role="separator"
                style="border-style: solid;"
              />
              <!--v-if-->
              <button
                class="v-stepper-item"
                data-v-c492a79d=""
                disabled=""
                type="button"
              >
                <!---->
                <div
                  class="v-avatar v-theme--light v-avatar--density-default v-avatar--variant-flat v-stepper-item__avatar"
                  style="width: 24px; height: 24px;"
                >
                  
                  
                  2
                  
                  
                  
                  <!---->
                  <span
                    class="v-avatar__underlay"
                  />
                  
                </div>
                <div
                  class="v-stepper-item__content"
                >
                  <!---->
                  <!---->
                  
                  Finish
                  
                </div>
              </button>
            </div>
            
            <!---->
          </div>
          <div
            data-v-c492a79d=""
          >
            <div
              class="v-sheet v-theme--light elevation-0 v-sheet--rounded mt-4 file-upload-sheet d-flex justify-center align-center"
              data-v-c492a79d=""
            >
              <button
                class="v-btn v-theme--light text-primary v-btn--density-default v-btn--size-x-large v-btn--variant-text"
                data-v-c492a79d=""
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start"
                    data-v-c492a79d=""
                  >
                    <svg
                      aria-hidden="true"
                      class="v-icon__svg"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z"
                      />
                    </svg>
                  </i>
                  <span
                    class="text-none text-body-large"
                    data-v-c492a79d=""
                  >
                    Click here to upload a file (.xlsx)
                  </span>
                  
                  
                </span>
                <!---->
                <!---->
              </button>
              <input
                accept=".xlsx"
                aria-label="file-input"
                data-v-c492a79d=""
                hidden=""
                type="file"
              />
            </div>
          </div>
          <div
            class="mb-n4"
            data-v-c492a79d=""
          >
            
            
          </div>
        </div>
      </div>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div
      class="v-card-actions"
      data-v-4db4f123=""
    >
      
      <div
        class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-checkbox"
        data-v-11da4d2c=""
        data-v-c492a79d=""
      >
        <!---->
        <div
          class="v-input__control"
        >
          
          <div
            class="v-selection-control v-selection-control--density-default v-checkbox-btn"
          >
            <div
              class="v-selection-control__wrapper"
            >
              <!---->
              <div
                class="v-selection-control__input"
              >
                
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-theme--light v-icon--size-default"
                >
                  <svg
                    aria-hidden="true"
                    class="v-icon__svg"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,3H5C3.89,3 3,3.89 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
                    />
                  </svg>
                </i>
                <input
                  aria-disabled="false"
                  id="data-import-checklist"
                  type="checkbox"
                  value="true"
                />
                
              </div>
            </div>
            <label
              class="v-label v-label--clickable"
              for="data-import-checklist"
            >
              <!---->
              
              
              <div
                class="ml-4"
                dark="false"
                data-v-11da4d2c=""
              >
                <div
                  class="text-body-medium d-flex align-center text-primary-text"
                >
                  Confirm overwriting data 
                  
                  
                </div>
                <div
                  class="text-body-small text-secondary-text"
                >
                  Uploaded data will overwrite current settings.
                </div>
              </div>
              
              
            </label>
          </div>
          
        </div>
        <!---->
        <!---->
      </div>
      
      <div
        class="v-spacer"
        data-v-c492a79d=""
      />
      <button
        class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text px-4"
        data-v-c492a79d=""
        id="evocon-button"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <!--v-if-->
          <span
            class=""
            id="evocon-button-text"
          >
            Cancel
          </span>
          
          
        </span>
        <!---->
        <!---->
      </button>
      <button
        class="v-btn v-btn--disabled v-btn--slim v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-flat px-4"
        data-v-c492a79d=""
        disabled=""
        id="evocon-button"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <!--v-if-->
          <span
            class=""
            id="evocon-button-text"
          >
            Add
          </span>
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
</div>
`;

exports[`SettingsDataImportUpload > renders correctly when file is chosen 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
  data-v-c492a79d=""
  id="data-import-upload"
>
  <div
    class="v-card v-theme--light v-card--density-default v-card--variant-elevated mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    style="max-width: 900px;"
  >
    <!---->
    <div
      class="v-card__loader"
    >
      <div
        aria-hidden="true"
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-theme--light v-locale--is-ltr"
        role="progressbar"
        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
      >
        <!---->
        <div
          class="v-progress-linear__background"
        />
        <div
          class="v-progress-linear__buffer"
          style="width: 0%;"
        />
        <transition-stub
          appear="false"
          css="true"
          name="fade-transition"
          persisted="false"
        >
          <div
            class="v-progress-linear__indeterminate"
          >
            
            <div
              class="v-progress-linear__indeterminate long"
            />
            <div
              class="v-progress-linear__indeterminate short"
            />
            
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    
    <!--v-if-->
    
    
    <div
      class="v-card-title justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
    >
      Data import
    </div>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <div
        class="v-row v-row--density-default"
        data-v-c492a79d=""
      >
        <div
          class="v-col v-col--cols-12 py-4 px-1"
          data-v-c492a79d=""
        >
          <div
            class="v-sheet v-theme--light elevation-2 v-sheet--rounded v-stepper"
            data-v-c492a79d=""
          >
            <!---->
            <!---->
            
            <div
              class="v-stepper-header"
              data-v-c492a79d=""
            >
              <button
                class="v-stepper-item v-stepper-item--selected"
                data-v-c492a79d=""
                disabled=""
                type="button"
              >
                <!---->
                <div
                  class="v-avatar v-theme--light bg-primary v-avatar--density-default v-avatar--variant-flat v-stepper-item__avatar"
                  style="width: 24px; height: 24px;"
                >
                  
                  
                  1
                  
                  
                  
                  <!---->
                  <span
                    class="v-avatar__underlay"
                  />
                  
                </div>
                <div
                  class="v-stepper-item__content"
                >
                  <!---->
                  <!---->
                  
                  Add file
                  
                </div>
              </button>
              <hr
                aria-orientation="horizontal"
                class="v-divider v-theme--light"
                data-v-c492a79d=""
                role="separator"
                style="border-style: solid;"
              />
              <!--v-if-->
              <button
                class="v-stepper-item"
                data-v-c492a79d=""
                disabled=""
                type="button"
              >
                <!---->
                <div
                  class="v-avatar v-theme--light v-avatar--density-default v-avatar--variant-flat v-stepper-item__avatar"
                  style="width: 24px; height: 24px;"
                >
                  
                  
                  2
                  
                  
                  
                  <!---->
                  <span
                    class="v-avatar__underlay"
                  />
                  
                </div>
                <div
                  class="v-stepper-item__content"
                >
                  <!---->
                  <!---->
                  
                  Finish
                  
                </div>
              </button>
            </div>
            
            <!---->
          </div>
          <div
            data-v-c492a79d=""
          >
            <div
              class="v-sheet v-theme--light elevation-0 v-sheet--rounded mt-4 file-upload-sheet d-flex justify-center align-center"
              data-v-c492a79d=""
            >
              <button
                class="v-btn v-theme--light text-primary v-btn--density-default v-btn--size-x-large v-btn--variant-text"
                data-v-c492a79d=""
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  <i
                    aria-hidden="true"
                    class="v-icon notranslate v-theme--light v-icon--size-default v-icon--start"
                    data-v-c492a79d=""
                  >
                    <svg
                      aria-hidden="true"
                      class="v-icon__svg"
                      role="img"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13,9V3.5L18.5,9M6,2C4.89,2 4,2.89 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6Z"
                      />
                    </svg>
                  </i>
                  <span
                    class="text-none text-body-large"
                    data-v-c492a79d=""
                  >
                    fileName.xlsx
                  </span>
                  
                  
                </span>
                <!---->
                <!---->
              </button>
              <input
                accept=".xlsx"
                aria-label="file-input"
                data-v-c492a79d=""
                hidden=""
                type="file"
              />
            </div>
          </div>
          <div
            class="mb-n4"
            data-v-c492a79d=""
          >
            
            
          </div>
        </div>
      </div>
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div
      class="v-card-actions"
      data-v-4db4f123=""
    >
      
      <div
        class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-checkbox"
        data-v-11da4d2c=""
        data-v-c492a79d=""
      >
        <!---->
        <div
          class="v-input__control"
        >
          
          <div
            class="v-selection-control v-selection-control--density-default v-checkbox-btn"
          >
            <div
              class="v-selection-control__wrapper"
            >
              <!---->
              <div
                class="v-selection-control__input"
              >
                
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-theme--light v-icon--size-default"
                >
                  <svg
                    aria-hidden="true"
                    class="v-icon__svg"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,3H5C3.89,3 3,3.89 3,5V19C3,20.1 3.9,21 5,21H19C20.1,21 21,20.1 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
                    />
                  </svg>
                </i>
                <input
                  aria-disabled="false"
                  id="data-import-checklist"
                  type="checkbox"
                  value="true"
                />
                
              </div>
            </div>
            <label
              class="v-label v-label--clickable"
              for="data-import-checklist"
            >
              <!---->
              
              
              <div
                class="ml-4"
                dark="false"
                data-v-11da4d2c=""
              >
                <div
                  class="text-body-medium d-flex align-center text-primary-text"
                >
                  Confirm overwriting data 
                  
                  
                </div>
                <div
                  class="text-body-small text-secondary-text"
                >
                  Uploaded data will overwrite current settings.
                </div>
              </div>
              
              
            </label>
          </div>
          
        </div>
        <!---->
        <!---->
      </div>
      
      <div
        class="v-spacer"
        data-v-c492a79d=""
      />
      <button
        class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text px-4"
        data-v-c492a79d=""
        id="evocon-button"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <!--v-if-->
          <span
            class=""
            id="evocon-button-text"
          >
            Cancel
          </span>
          
          
        </span>
        <!---->
        <!---->
      </button>
      <button
        class="v-btn v-btn--disabled v-btn--slim v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-flat px-4"
        data-v-c492a79d=""
        disabled=""
        id="evocon-button"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <!--v-if-->
          <span
            class=""
            id="evocon-button-text"
          >
            Add
          </span>
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      
    </div>
    
    <!---->
    
    <!---->
    <span
      class="v-card__underlay"
    />
    
  </div>
</div>
`;
